Fix homepage banner styling on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,7 @@
 .banner-image {
   background-image: url(../images/akiak_satchel_1.png);
   background-position: 39% 50%;
+  background-size: cover;
   min-height: 65vh;
   height: 65%;
 }
